# docker_zmq

./: README.md
image/: reqfiles.py
image/rep/: Dockerfile  rep.py  zmqnparray.py
image/rep_cpp/: CMakeLists.txt  cpprep.cpp
image/req/: Dockerfile  req.py  run.sh  zmqnparray.py
image/reqimages/: reqimages.py  zmqnparray.py
images/reqimages/: reqimages.py  zmqnparray.py
ndarray/: zmqnparray.py
ndarray/rep/: rep.py
ndarray/req/: build.sh  req.py  zmqnparray.py
simple/rep/: build.sh  install-rep.sh  rep.py  run.sh
simple/req/: Dockerfile  req.py
